--- a/history.html
+++ b/history.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css/timeline.css">
     <link rel="stylesheet" href="css/Top_style.css">
     
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="js/jquery-3.3.1.min.js"></script>
 
     <button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
     <title>History</title>
